--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "fittrack-pro-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "Server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node Server.js",
+    "dev": "nodemon Server.js",
     "test": "jest"
   },
   "dependencies": {
