Add admin system to backend

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=5000
 NODE_ENV=development
 MONGODB_URI=mongodb://localhost:27017/fittrack-pro
-JWT_SECRET=your-secret-key-here-change-this
+JWT_SECRET=FitTrackPro2024$ecureK3y!@#$%^&*()_+DisSertation
 JWT_EXPIRE=15m
-JWT_REFRESH_SECRET=your-refresh-secret-here-change-this
+JWT_REFRESH_SECRET=RefreshT0ken$ecur3K3yF0rFitTrack2024!@#$%
 JWT_REFRESH_EXPIRE=7d
